# cframe

./: CMakeLists.txt  README.md  main.cpp  run.sh
src/core/: main.cpp
src/media/: media_pipe.cpp  media_pipe.h
src/rendering/: screen_loop.cpp
